[metadata]
name = hydraPlus
version = 0.0.1
author = Matthew Macaulay
author_email = matthew.macaulay@uts.edu.au
description = A python implementation of Hydra+
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mattapow/hydraPlus
project_urls =
    Bug Tracker = https://github.com/mattapow/hydraPlus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
